@@ -1,13 +1,13 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI=5
-USE_RUBY="ruby18 ruby19 ruby20 jruby"
+USE_RUBY="ruby19 ruby20 ruby21 ruby22"
 
 RUBY_FAKEGEM_EXTRADOC="CHANGELOG README.rdoc"
 
-RUBY_FAKEGEM_DOCDIR="rdoc"
+RUBY_FAKEGEM_RECIPE_DOC="rdoc"
 
 # Don't work due to Rails version problems.
 RUBY_FAKEGEM_TASK_TEST=""
